few changes in model and search pages

--- a/shop/ClientApp/src/app/details/details.component.html
+++ b/shop/ClientApp/src/app/details/details.component.html
@@ -6,25 +6,12 @@
                     <img  src="https://apollo-ireland.akamaized.net/v1/files/p6kjfl9l3ooz1-UA/image;s=644x461" alt="">
                 </div>
                 
-                <p>Металлоискатель, металошукая Фортуна М3, в корпусе ПЛ Гарантия 1 год.</p>
-                <p>Луцк, Волынская область Добавлено: в 12:37, 6 апреля 2020, Номер объявления: 544058806</p>
-                <p>
-                    Металлоискатель, металошукая Фортуна М3, корпус ПЛ Гарантия 1 год.
-
-                    Переходите на наш сайт, где есть больше моделей металлоискателей.
-
-                    Ссылка на сайт: https://tainik.com.ua
-
-                    Гарантия – 12 мес.
-                    Катушка ВОДОНЕПРОНИЦАЕМАЯ!
-                    Сделано в УКРАИНЕ!
-                    Отправка по всей Украине БЕЗ ПРЕДОПЛАТ!
-                </p>
+                <p>{{advert.title}}</p>
+                <p>Номер объявления: {{advert.adId}}</p>
+                <p>{{advert.desc}}</p>
             </div>
             <div class="col-3">
-                <div style="background-color: white;text-align: center;padding: 25px 20px;">
-                    333
-                </div>
+                <div style="background-color: white;text-align: center;padding: 25px 20px;">{{advert.price}} uah</div>
             </div>
         </div>
 
