--- a/shop/ClientApp/src/app/search/search.component.html
+++ b/shop/ClientApp/src/app/search/search.component.html
@@ -62,7 +62,7 @@
         <div *ngFor="let item of ads" class="card my-3">
             <div class="row no-gutters">
                 <div class="col-2">
-                    <a href="#">
+                    <a href="details?id={{item.adId}}">
                         <img style="width: 100%;"
                             src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQ-eXU7nuTNc2WpFt58LTyr7Cjx5hX_TfR09KFMDZu3dDbknnF6&usqp=CAU"
                             class="card-img" alt="...">
@@ -72,7 +72,7 @@
                     <div class="p-2">
                         <div class="row">
                             <div class="col-6">
-                                <a href="#" class="card-title">{{item.title}}</a>
+                                <a href="details?id={{item.adId}}" class="card-title">{{item.title}}</a>
                             </div>
                             <div class="col-6 text-right">
                                 <strong>{{item.price}} uah</strong>
