--- a/shop/ClientApp/src/app/search/search.component.html
+++ b/shop/ClientApp/src/app/search/search.component.html
@@ -1,63 +1,75 @@
 <div class="main_content">
-    <div class="row">
-        <div class="col-4 pl-0">
-            <div class="input_with_Icon">
-                <i class="fa fa-search" aria-hidden="true"></i>
-                <input type="search" class="form-control" placeholder="Поиск...">
+    <form #searchForm="ngForm" (ngSubmit)="onClickSubmit(searchForm.value)">
+        <div class="row">
+            <div class="col-4 pl-0">
+                <div class="input_with_Icon">
+                    <i class="fa fa-search" aria-hidden="true"></i>
+                    <input type="search" class="form-control" placeholder="Поиск..." name="search" id="search" ngModel>
+                </div>
             </div>
-        </div>
-        <div class="col-4 pl-0">
-            <div class="input_with_Icon">
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <input type="text" class="form-control" placeholder="Вся Украина">
-            </div>
-        </div>
-        <div class="col-4 pl-0">
-            <div class="input_with_Icon">
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <input type="text" class="form-control" placeholder="Все рубрики">
-            </div>
-        </div>
-    </div>
-    <div class="row mt-3">
-        <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="customCheck1">
-            <label class="custom-control-label" for="customCheck1">Искать в заголовке и описании</label>
-        </div>
-        <div class="custom-control custom-checkbox mx-5">
-            <input type="checkbox" class="custom-control-input" id="customCheck2">
-            <label class="custom-control-label" for="customCheck2">Только с фото</label>
-        </div>
-        <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="customCheck3">
-            <label class="custom-control-label" for="customCheck3">Товары с доставкой</label>
-        </div>
-    </div>
-    <div class="mt-3">
-        <div class="mb-2 col-3">
-            <input type="number" class="form-control" placeholder="Цена от (грн.)">
-        </div>
-        <div class="col-3">
-            <input type="number" class="form-control" placeholder="Цена до (грн.)">
-        </div>
-    </div>
-    <div class="row mt-3" style="justify-content: flex-end;">
-        <div>
-            <a href="#" class="btn">Добавить в избранное</a>
-        </div>
-        <div class="input_with_Icon ml-2">
-            <a class="btn search_button" href="#">
-                <i class="fa fa-search" aria-hidden="true"></i>
-                <span class="pl-5">Поиск</span>
-            </a>
-        </div>
-    </div>
+            <div class="col-4 pl-0">
+                <div class="input_with_Icon">
+                    <i class="fa fa-map-marker" aria-hidden="true"></i>
+                    <!-- <input type="text" class="form-control"  placeholder="Вся Украина" name="city" id="city" ngModel> -->
 
+                    <select (change)="filterForeCasts($event.target.value)">
+                        <option value="Вся Украина">Вся Украина</option>
+                        <option *ngFor="let summary of summaries" value={{summary}}>
+                          {{summary}}
+                        </option>
+                      </select>
 
+                </div>
+            </div>
+            <div class="col-4 pl-0">
+                <select (change)="filterCategories($event.target.value)">
+                    <option value="0">Все рубрики</option>
+                    <option *ngFor="let sub of subCategories" value={{sub.subCategoryId}}>
+                      {{sub.name}}
+                    </option>
+                  </select>
+            </div>
+            </div>
+        <div class="row mt-3">
+            <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input"  name="searchTitleDesc" id="searchTitleDesc" ngModel>
+                <label class="custom-control-label" for="searchTitleDesc">Искать в заголовке и описании</label>
+            </div>
+            <div class="custom-control custom-checkbox mx-5">
+                <input type="checkbox" class="custom-control-input" id="searchWithPhoto" name="searchWithPhoto" ngModel>
+                <label class="custom-control-label" for="searchWithPhoto">Только с фото</label>
+            </div>
+            <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="SearchWithDelivery" name="SearchWithDelivery" ngModel>
+                <label class="custom-control-label" for="SearchWithDelivery">Товары с доставкой</label>
+            </div>
+        </div>
+        <div class="mt-3">
+            <div class="mb-2 col-3">
+                <input type="number" class="form-control" placeholder="Цена от (грн.)" name="priceMin" id="priceMin" ngModel>
+            </div>
+            <div class="col-3">
+                <input type="number" class="form-control" placeholder="Цена до (грн.)" name="priceMax" id="priceMax" ngModel>
+            </div>
+        </div>
+        <div class="row mt-3" style="justify-content: flex-end;">
+            <div>
+                <a href="#" class="btn">Добавить в избранное</a>
+            </div>
+            <div class="input_with_Icon ml-2">
+                <input type="submit" value="Поиск" class="btn btn-primary">
+            </div>
+        </div>
+    </form>
 </div>
 <!-- results of search -->
 <div style="background-color: white;">
     <div class="main_content py-5">
+
+        <div class="text-left mb-3">
+            <h5>Обычные объявления</h5>
+            <p style="color: gray;font-size: 14px;">Найдено {{ads.length}} объявлений</p>
+        </div>
 
         <div *ngFor="let item of ads" class="card my-3">
             <div class="row no-gutters">
@@ -65,7 +77,7 @@
                     <a href="details?id={{item.adId}}">
                         <img style="width: 100%;"
                             src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQ-eXU7nuTNc2WpFt58LTyr7Cjx5hX_TfR09KFMDZu3dDbknnF6&usqp=CAU"
-                            class="card-img" alt="...">
+                            class="card-img">
                     </a>
                 </div>
                 <div class="col-10">
@@ -85,11 +97,8 @@
                             <small class="text-muted">{{item.desc}}</small>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
-
-        
     </div>
 </div>
