--- a/shop/ClientApp/src/app/post-new-ad/post-new-ad.component.html
+++ b/shop/ClientApp/src/app/post-new-ad/post-new-ad.component.html
@@ -26,18 +26,28 @@
         </div>
         <div class="row form-group">
             <div class="col-4 text-right">
-                <label for="categoty">Рубрика</label>
+                <label for="categoty">Категория</label>
             </div>
             <select id="category" (change)="filterCategories($event.target.value)">
-                <option *ngFor="let sub of subCategories" value={{sub.subCategoryId}}>
-                  {{sub.name}}
+                <option *ngFor="let cat of Categories" value={{cat.categoryId}}>
+                    {{cat.name}}
                 </option>
-              </select>
+            </select>
+        </div>
+        <div class="row form-group">
+            <div class="col-4 text-right">
+                <label for="subCategory">Под категория</label>
+            </div>
+            <select id="subCategory" (change)="filterSubCategories($event.target.value)">
+                <option *ngFor="let sub of _subCategories"  value={{sub.subCategoryId}}>
+                    {{sub.name}}
+                </option>
+            </select>
         </div>
         <div class="row form-group">
             <div class="col-4 text-right">
                 <label for="desc">Описание</label>
-            </div>
+                </div>
             <div class="col-6">
                 <textarea required minlength="10" maxlength="1000" #desc="ngModel" class="form-control" required
                     id="desc" name="desc" ngModel></textarea>
