sorting done on search page

--- a/shop/ClientApp/src/app/search/search.component.html
+++ b/shop/ClientApp/src/app/search/search.component.html
@@ -28,6 +28,7 @@
                     </option>
                 </select>
                 <select id="subCategory" (change)="filterSubCategories($event.target.value)" >
+                    <option value="0">Все подкатегории</option>
                     <option *ngFor="let sub of _subCategories"  value={{sub.subCategoryId}}>
                         {{sub.name}}
                     </option>
@@ -50,10 +51,10 @@
         </div>
         <div class="mt-3">
             <div class="mb-2 col-3">
-                <input type="number" class="form-control" placeholder="Цена от (грн.)" name="priceMin" id="priceMin" ngModel>
+                <input type="number"  class="form-control" placeholder="Цена от (грн.)" value="-1" name="priceMin" id="priceMin" ngModel>
             </div>
             <div class="col-3">
-                <input type="number" class="form-control" placeholder="Цена до (грн.)" name="priceMax" id="priceMax" ngModel>
+                <input type="number" class="form-control" placeholder="Цена до (грн.)" value="-1" name="priceMax" id="priceMax" ngModel>
             </div>
         </div>
         <div class="row mt-3" style="justify-content: flex-end;">
@@ -62,6 +63,14 @@
             </div>
             <div class="input_with_Icon ml-2">
                 <input type="submit" value="Поиск" class="btn btn-primary">
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div>
+                <a (click)="SearchByAscOrder()" class="btn">Самые дешевые</a>
+            </div>
+            <div>
+                <a (click)="SearchByDescOrder()" class="btn">Самые дорогие</a>
             </div>
         </div>
     </form>
